tests/compilation_error/incompatible_comparison.ll
int a = 5
string b = "hi"
print a == b
